# skinharmony-ai-backend

./: .gitignore  AGENTS.md  AssistantService.js  engine_v1.js  google_api.js  library_beta_v1.json  library_selector.js  load_env.js  package-lock.json  package.json  render-core-mcp.yaml  render-nyra.yaml  render-suite-control-plane.yaml  render-universal-core.yaml  server_v1.js  vision_adapter.js
.codex/: config.toml  hooks.json
architecture/: nyra-deep-branch-v2-catalog.yaml  nyra-deep-branch-v2-contract.schema.json  nyra-deep-branch-v2-design.yaml
docs/: CHATGPT_NYRA_CORE_DEPLOYMENT.md  CLOUD_WORK_MEMORY_V1.md  CORE_DECISION_LEDGER_IMPLEMENTATION_2026-07-15.md  CORE_RUNTIME_V0_V1_V2_V7_ARCHITECTURE_2026-07-15.md  EMBEDDED_SOFTWARE_INTELLIGENCE.md  NYRA_CORE_HORIZONTAL_RUNTIME.md  NYRA_DECISION_TO_VALUE_JOURNEY_V1.md  NYRA_DEEP_BRANCH_ARCHITECTURE_V2.md  NYRA_DEEP_BRANCH_V2_CHATGPT.md  NYRA_DEEP_BRANCH_V2_MAP.md  NYRA_RESEARCH_CORTEX.md  (+5 more)
services/universal-core-service/native/core-runtime/: Cargo.toml
services/universal-core-service/native/core-runtime/src/: main.rs
skinharmony-rust-extractor-governor/: Cargo.toml  IMPLEMENTATION_REPORT.md  README.md  SKINHARMONY_RUST_EXTRACTOR_GOVERNOR_SPEC.md
skinharmony-rust-extractor-governor/crates/skinharmony-catalog/: Cargo.toml
skinharmony-rust-extractor-governor/crates/skinharmony-catalog/src/: lib.rs
skinharmony-rust-extractor-governor/crates/skinharmony-classifier/: Cargo.toml
skinharmony-rust-extractor-governor/crates/skinharmony-classifier/src/: lib.rs
skinharmony-rust-extractor-governor/crates/skinharmony-cli/: Cargo.toml
skinharmony-rust-extractor-governor/crates/skinharmony-cli/src/: main.rs
skinharmony-rust-extractor-governor/crates/skinharmony-core-math/: Cargo.toml
skinharmony-rust-extractor-governor/crates/skinharmony-core-math/src/: lib.rs
skinharmony-rust-extractor-governor/crates/skinharmony-extractor/: Cargo.toml
skinharmony-rust-extractor-governor/crates/skinharmony-extractor/src/: lib.rs
skinharmony-rust-extractor-governor/crates/skinharmony-extractor/tests/: end_to_end.rs
skinharmony-rust-extractor-governor/crates/skinharmony-policy/: Cargo.toml
skinharmony-rust-extractor-governor/crates/skinharmony-policy/src/: lib.rs
skinharmony-rust-extractor-governor/crates/skinharmony-translator-contract/: Cargo.toml
skinharmony-rust-extractor-governor/crates/skinharmony-translator-contract/src/: lib.rs
skinharmony-rust-extractor-governor/tests/fixtures/api_messages/: messages.json
skinharmony-rust-extractor-governor/tests/fixtures/bundle/: app.min.js
skinharmony-rust-extractor-governor/tests/fixtures/html_site/: index.html
skinharmony-rust-extractor-governor/tests/fixtures/locales/: it.json
skinharmony-rust-extractor-governor/tests/fixtures/noise/: noise.txt
skinharmony-rust-extractor-governor/tests/fixtures/react_app/: App.tsx
skinharmony-rust-extractor-governor/tests/fixtures/smartdesk_mixed/: AiGoldPanel.tsx  gold-bridge.js  runtime-messages.json
(+5076 files in other folders)
