[package]
name = "skinharmony-classifier"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
regex.workspace = true
skinharmony-core-math = { path = "../skinharmony-core-math" }
skinharmony-translator-contract = { path = "../skinharmony-translator-contract" }

